@@ -11,7 +11,7 @@ WriteMakefile(
     SIGN         => 1,
     PL_FILES     => { },
     PREREQ_PM => {
-        'Moose'              => '0.41', # class_type
+        'Moose'              => '2.0100', # inline_as
         'DateTime'           => '0.4302',
         'DateTime::Locale'   => '0.4001',
         'DateTime::TimeZone' => '0.95',
